Fixed typo in html text

--- a/src/main/resources/static/sample_index.html
+++ b/src/main/resources/static/sample_index.html
@@ -50,7 +50,7 @@
                     <li>Bell Pepper</li>
                     <li>Salt</li>
                     <li>Water</li>
-                    <li>Chicken boulion</li>
+                    <li>Chicken bouillon</li>
                 </ul>
             </div>
             <div class="px-5"></div>
