--- a/carefree-ui/add_recipe.html
+++ b/carefree-ui/add_recipe.html
@@ -1,85 +1,75 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <script src="https://kit.fontawesome.com/a27df8db00.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="style.css">
-    <title>Carefree Cooking</title>
-</head>
-<body class="bg-white bg-gradient">
-    <!-- Header -->
-    <header class="bg-dark text-light p-3">
-        <div>
-            <h2>Carefree Cooking</h2>
-        </div>
-    </header>
-
-    <div class="container-fluid wrapper">
-        <div class="p-2"></div>
-
-        <!-- Add recipe header -->
-        <section class="container text-dark px-0 py-3 rounded-top">
-            <div class="p-2">
-                <h2>Let's add a recipe...</h2>
+    <head>
+        <meta charset="UTF-8"/>
+        <link href="bootstrap_theme/bootstrap.css" rel="stylesheet" type="text/css"/>
+        <script src="https://kit.fontawesome.com/a27df8db00.js" crossorigin="anonymous"></script>
+        <link rel="stylesheet" href="style.css"/>
+        <title>Carefree Cooking</title>
+    </head>
+    <body class="bg-white bg-gradient">
+        <!-- Header -->
+        <header class="bg-dark text-light p-3">
+            <div>
+                <h1 class="align-middle fs-1 lead">Carefree Cooking</h1>
             </div>
-        </section>
-
-        <section>
-            <input type="text" size="30" style="border: 0; font-size: xx-large;" class="p-3" placeholder="Type your recipe name here..."></input>
-        </section>
-
-        <!-- Ingredients Section -->
-        <section class="container bg-secondary text-light p-3 rounded-top rounded-bottom">
-            <h3>Ingredients</h3>
-            <div class="container mt-3">
-                <ol class="list-group" id="ingredient-list">
-                    
-                </ol>
-            </div>
-            <div class="container input-group my-2">
-                <input type="text" class="form-control" placeholder="Add an item..." id="add-ingredient-input">
-                <div class="input-group-append">
-                    <button class="btn bg-dark bg-gradient text-light btn-outline-secondary" type="button" id="add-ingredient-button">Add</button>
+        </header>
+        <div class="container-fluid wrapper">
+            <div class="p-2"></div>
+            <!-- Add recipe header -->
+            <section class="container text-dark px-0 py-3 rounded-top">
+                <div class="p-2">
+                    <h2>Let's add a recipe...</h2>
                 </div>
-            </div>
-        </section>
-
-        <!-- Instructions Section -->
-        <section class="container bg-light text-dark border border-secondary p-3 rounded-top rounded-bottom">
-            <h3>Instructions</h3>
-            <div class="container mt-3">
-                <ol class="list-group" id="instruction-list">
-                    
-                </ol>
-            </div>
-            <div class="container input-group my-2">
-                <input type="text" class="form-control" placeholder="Add an item..." id="add-instruction-input">
-                <div class="input-group-append">
-                    <button class="btn bg-dark bg-gradient text-light btn-outline-secondary" type="button" id="add-instruction-button">Add</button>
+            </section>
+            <section>
+                <input type="text" size="30" style="border: 0; font-size: xx-large;" class="p-3" placeholder="Type your recipe name here..." id="recipe-name"></input>
+            </section>
+            <!-- Ingredients Section -->
+            <section class="container bg-secondary text-light p-3 rounded-top rounded-bottom">
+                <h3>Ingredients</h3>
+                <div class="container mt-3">
+                    <ol class="list-group" id="ingredient-list">
+</ol>
                 </div>
-            </div>
-        </section>
-
-        <!-- Save or Cancel Section -->
-        <section class="container bg-white text-dark p-3 rounded-top rounded-bottom">
-            <div class="d-flex justify-content-between">
-                <div></div>
-                <div></div>
-                <div>
-                    <button class="btn bg-dark bg-gradient text-light btn-outline-secondary" type="button">Save</button>
-                    <button class="btn bg-dark bg-gradient text-light btn-outline-secondary" type="button">Cancel</button>
+                <div class="container input-group my-2">
+                    <input type="text" class="form-control" placeholder="Add an item..." id="add-ingredient-input"/>
+                    <div class="input-group-append">
+                        <button class="btn bg-dark bg-gradient text-light btn-outline-secondary" type="button" id="add-ingredient-button">Add</button>
+                    </div>
                 </div>
-            </div>
-        </section>
-
-        <div class="p-5"></div>
-    </div> 
-
-    <!-- Footer -->
-    <footer class="bg-light text-dark p-3 text-right">
+            </section>
+            <!-- Instructions Section -->
+            <section class="container bg-light text-dark border border-secondary p-3 rounded-top rounded-bottom">
+                <h3>Instructions</h3>
+                <div class="container mt-3">
+                    <ol class="list-group" id="instruction-list">
+</ol>
+                </div>
+                <div class="container input-group my-2">
+                    <input type="text" class="form-control" placeholder="Add an item..." id="add-instruction-input"/>
+                    <div class="input-group-append">
+                        <button class="btn bg-dark bg-gradient text-light btn-outline-secondary" type="button" id="add-instruction-button">Add</button>
+                    </div>
+                </div>
+            </section>
+            <!-- Save or Cancel Section -->
+            <section class="container bg-white text-dark p-3 rounded-top rounded-bottom">
+                <div class="d-flex justify-content-between">
+                    <div></div>
+                    <div></div>
+                    <div>
+                        <button class="btn bg-dark bg-gradient text-light btn-outline-secondary" type="button">Save</button>
+                        <button class="btn bg-dark bg-gradient text-light btn-outline-secondary" type="button">Cancel</button>
+                    </div>
+                </div>
+            </section>
+            <div class="p-5"></div>
+        </div>         
+        <!-- Footer -->
+        <footer class="bg-light text-dark p-3 text-right">
             <h5>Powered by Bootstrap 5</h5>
-    </footer>
-    <script src="add_recipe.js"></script>
-</body>
+        </footer>
+        <script src="add_recipe.js"></script>
+    </body>
 </html>
