--- a/carefree-ui/add_recipe.html
+++ b/carefree-ui/add_recipe.html
@@ -23,7 +23,7 @@
                 </div>
             </section>
             <section>
-                <input type="text" size="30" style="border: 0; font-size: xx-large;" class="p-3" placeholder="Type your recipe name here..." id="recipe-name"></input>
+                <input type="text" size="50" class="p-3" placeholder="Type your recipe name here..." id="recipe-name"></input>
             </section>
             <!-- Ingredients Section -->
             <section class="container bg-secondary text-light p-3 rounded-top rounded-bottom">
