--- a/carefree-ui/add_recipe.html
+++ b/carefree-ui/add_recipe.html
@@ -23,7 +23,7 @@
                 </div>
             </section>
             <section>
-                <input type="text" size="50" class="p-3" placeholder="Type your recipe name here..." id="recipe-name"></input>
+                <input type="text" class="container p-3 rounded border border-primary" placeholder="Type your recipe name here..." id="recipe-name"></input>
             </section>
             <!-- Ingredients Section -->
             <section class="container bg-secondary text-light p-3 rounded-top rounded-bottom">
@@ -59,7 +59,7 @@
                     <div></div>
                     <div></div>
                     <div>
-                        <button class="btn bg-dark bg-gradient text-light btn-outline-secondary" type="button">Save</button>
+                        <button class="btn bg-dark bg-gradient text-light btn-outline-secondary" type="button" id="save-button">Save</button>
                         <button class="btn bg-dark bg-gradient text-light btn-outline-secondary" type="button">Cancel</button>
                     </div>
                 </div>
