--- a/carefree-ui/add_recipe.html
+++ b/carefree-ui/add_recipe.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8"/>
         <link href="bootstrap_theme/bootstrap.css" rel="stylesheet" type="text/css"/>
-        <script src="https://kit.fontawesome.com/a27df8db00.js" crossorigin="anonymous"></script>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" />
         <link rel="stylesheet" href="style.css"/>
         <title>Carefree Cooking</title>
     </head>
