Improved recipe menu appearance and added links to switch between both htmls files while browsing

--- a/carefree-ui/add_recipe.html
+++ b/carefree-ui/add_recipe.html
@@ -30,7 +30,7 @@
                 <h3>Ingredients</h3>
                 <div class="container mt-3">
                     <ol class="list-group" id="ingredient-list">
-</ol>
+                    </ol>
                 </div>
                 <div class="container input-group my-2">
                     <input type="text" class="form-control" placeholder="Add an item..." id="add-ingredient-input"/>
@@ -60,7 +60,7 @@
                     <div></div>
                     <div>
                         <button class="btn bg-dark bg-gradient text-light btn-outline-secondary" type="button" id="save-button">Save</button>
-                        <button class="btn bg-dark bg-gradient text-light btn-outline-secondary" type="button">Cancel</button>
+                        <button class="btn bg-dark bg-gradient text-light btn-outline-secondary" type="button" id="cancel-button">Cancel</button>
                     </div>
                 </div>
             </section>
@@ -68,7 +68,7 @@
         </div>         
         <!-- Footer -->
         <footer class="bg-light text-dark p-3 text-right">
-            <h5>Powered by Bootstrap 5</h5>
+            <h5>Powered by Spring and Bootstrap 5</h5>
         </footer>
         <script src="add_recipe.js"></script>
     </body>
