--- a/carefree-ui/recipe_menu.html
+++ b/carefree-ui/recipe_menu.html
@@ -14,6 +14,7 @@
                 <h1 class="align-middle fs-1 lead">Carefree Cooking</h1>
             </div>
         </header>
+
         <div class="container-fluid wrapper">
             <div class="p-2"></div>
             <section class="container text-dark px-0 py-3 rounded-top">
@@ -22,12 +23,13 @@
                     <button class="btn btn-outline-secondary" id="add-recipe-button">Add a recipe</button>
                 </div>
             </section>
+            
             <!-- Show Recipes Section -->
-            <section class="container text-dark border border-secondary p-3 rounded-top rounded-bottom">
+            <section class="container text-dark bg-light border border-secondary p-3 rounded-top rounded-bottom" style="background-color:aliceblue;">
                 <h3>Recipes</h3>
                 <div class="container mt-3">
-                    <ol class="list-group" id="recipe-list">
-                        <!-- <button class="btn btn btn-outline-secondary text-start mb-2 p-3" id="recipe-btn-${id}"><span>${id+1} ${recipeName}</span></button> -->
+                    <ol class="input-group-btn list-group" id="recipe-list">
+                        <!-- <div class="d-flex"><button class="btn btn btn-outline-primary text-start mb-2 p-3 container-fluid" id="recipe-btn-${id}"><span>${id+1}. ${recipeName}</span></button><button class="btn btn-outline-primary text-start mx-1 mb-2 p-3 fas fa-trash-alt" id="recipe-delete-btn-${id}"></button></div> -->
                     </ol>
                 </div>
             </section>
