Ingredient data now populates in recipe_view html

--- a/carefree-ui/recipe_menu.html
+++ b/carefree-ui/recipe_menu.html
@@ -15,7 +15,7 @@
             </div>
         </header>
 
-        <div class="container-fluid wrapper">
+        <div class="container-fluid wrapper pb-4">
             <div class="p-2"></div>
             <section class="container text-dark px-0 py-3 rounded-top">
                 <div class="p-1 d-flex justify-content-between">
