Added ability to delete functions and fixed issues with refreshing the recipe list page

--- a/carefree-ui/add_recipe.html
+++ b/carefree-ui/add_recipe.html
@@ -14,7 +14,7 @@
                 <h1 class="align-middle fs-1 lead">Carefree Cooking</h1>
             </div>
         </header>
-        <div class="container-fluid wrapper">
+        <div class="p-4 container-fluid wrapper">
             <div class="p-2"></div>
             <!-- Add recipe header -->
             <section class="container text-dark px-0 py-3 rounded-top">
@@ -70,6 +70,7 @@
         <footer class="bg-light text-dark p-3 text-right">
             <h5>Powered by Spring and Bootstrap 5</h5>
         </footer>
-        <script src="add_recipe.js"></script>
+        <script src="recipe.js" type="module"></script>
+        <script src="add_recipe.js" type="module"></script>
     </body>
 </html>
