--- a/carefree-ui/recipe_view.html
+++ b/carefree-ui/recipe_view.html
@@ -26,7 +26,7 @@
             <!-- Recipe Title-->
             <section>
                 <div class="d-flex justify-content-between">
-                    <h1 class="py-2" id="recipe-title">loading...</h1>
+                    <h1 class="py-2" id="recipe-title"></h1>
                     <button class="btn btn-outline-secondary m-3" id="edit-button">Edit</button>
                 </div>
             </section>
@@ -36,7 +36,7 @@
                 <h3>Ingredients</h3>
                 <div class="container m-3">
                     <ol class="list-group" id="ingredient-list">
-                        <li id="ingredient-loading">loading...</li>
+                        <li id="ingredient-loading"></li>
                     </ol>
                 </div>
             </section>
