--- a/carefree-ui/recipe_view.html
+++ b/carefree-ui/recipe_view.html
@@ -21,7 +21,7 @@
             <button class="mx mb button" id="back-button">< Back to Recipes</button>
 
             <!--  -->
-            <div class="mx mb-sm grid">
+            <div class="mx mb-sm grid recipe-header">
                 <h1 id="recipe-title"></h1>
                 <button class="button" id="edit-button">Edit</button>
             </div>
