--- a/carefree-ui/add_recipe.html
+++ b/carefree-ui/add_recipe.html
@@ -54,7 +54,7 @@
         <footer>
             <h3>Powered by Spring</h3>
         </footer>
-        <script src="css_helper.js" async defer></script>
+        <script src="header_fade.js" async defer></script>
         <script src="add_recipe.js" type="module"></script>
     </body>
 </html>
