--- a/carefree-ui/recipe-add.html
+++ b/carefree-ui/recipe-add.html
@@ -7,10 +7,10 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" />
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="css/style.css">
     </head>
     <!-- TODO: Change onscroll to js only -->
-    <body onscroll="test()"> 
+    <body> 
         <!-- Website header -->
         <section>
             <div id="website-title">Carefree Cooking</div>
@@ -54,7 +54,7 @@
         <footer>
             <h3>Powered by Spring</h3>
         </footer>
-        <script src="header_fade.js" async defer></script>
-        <script src="add_recipe.js" type="module"></script>
+        <script src="js/header.js" async defer type="module"></script>
+        <script src="js/recipe-add.js" type="module"></script>
     </body>
 </html>
