Fixed all bugs in javascript related to html redesign.

--- a/carefree-ui/recipe-viewer.html
+++ b/carefree-ui/recipe-viewer.html
@@ -27,8 +27,8 @@
 
             <div class="mx outline-colored">
               <h1 class="text-light">Ingredients</h1>
-              <ol class="list-group" id="ingredient-list">
-              </ol>
+              <ul class="list-group" id="ingredient-list">
+              </ul>
             </div>
 
             <div class="mx outline">
