--- a/carefree-ui/recipe-viewer.html
+++ b/carefree-ui/recipe-viewer.html
@@ -8,6 +8,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" />
         <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="css/buttons.css">
+        <link rel="stylesheet" href="css/tools.css">
     </head>
     <body> 
         <!-- Website header -->
@@ -17,12 +19,12 @@
 
         <!-- Main Body -->
         <section class="wrapper">
-            <button class="mx mb button" id="back-button">< Back to Recipes</button>
+            <button class="mx mb" id="back-btn">< Back to Recipes</button>
 
             <!--  -->
             <div class="mx mb-sm grid recipe-header">
                 <h1 id="recipe-title"></h1>
-                <button class="button" id="edit-button">Edit</button>
+                <button id="edit-btn">Edit</button>
             </div>
 
             <div class="mx outline-colored">
