--- a/carefree-ui/recipe-menu.html
+++ b/carefree-ui/recipe-menu.html
@@ -8,9 +8,11 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" />
         <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="css/buttons.css">
+        <link rel="stylesheet" href="css/tools.css">
     </head>
     <!-- TODO: Change onscroll to js only -->
-    <body onscroll="test()"> 
+    <body> 
         <!-- Website header -->
         <section>
             <div id="website-title">Carefree Cooking</div>
@@ -20,12 +22,12 @@
         <section class="wrapper">
             <div class="mx mb grid">
                 <h1>Select a recipe...</h1>
-                <button class="button-dark" id="add-recipe-button">Add recipe</button>
+                <button id="add-recipe-btn">Add recipe</button>
             </div>
             <div class="mx mb outline">
                 <h1 class="header">Recipes</h1>
                 <div class="grid" id="recipe-list">
-                    <!-- <button class="recipe-select text-left" id="recipe-${id}">${id+1}. ${recipeName}</button><button class="fas fa-trash-alt button delete-btn" id="recipe-delete-btn-${id}"></button> -->
+                    <!-- <button class="recipe-btn text-left" id="recipe-${recipeId}">${index+1}. ${recipeName}</button><button class="delete-btn" id="delete-${recipeId}"><span id="delete-icon" class="fas fa-trash-can"></span></button> -->
                 </div>
             </div>
         </section>
