Corrected recipe dto to follow conventions. Fixed ingredient editing.

--- a/carefree-ui/recipe-menu.html
+++ b/carefree-ui/recipe-menu.html
@@ -22,12 +22,12 @@
         <section class="wrapper">
             <div class="mx mb grid">
                 <h1>Select a recipe...</h1>
-                <button id="add-recipe-btn">Add recipe</button>
+                <button id="add-recipe-btn" class="btn-dark">Add recipe</button>
             </div>
             <div class="mx mb outline">
                 <h1 class="header">Recipes</h1>
                 <div class="grid" id="recipe-list">
-                    <!-- <button class="recipe-btn text-left" id="recipe-${recipeId}">${index+1}. ${recipeName}</button><button class="delete-btn" id="delete-${recipeId}"><span id="delete-icon" class="fas fa-trash-can"></span></button> -->
+                    <!-- <button class="recipe-btn text-left" id="recipe-${recipeId}">${index+1}. ${recipeName}</button><button class="delete-btn fas fa-trash-can" id="delete-${recipeId}"></button> -->
                 </div>
             </div>
         </section>
